--- a/app/src/main/res/layout/filme_item.xml
+++ b/app/src/main/res/layout/filme_item.xml
@@ -51,7 +51,7 @@
                 tools:text="@tools:sample/lorem/random" />
 
             <TextView
-                android:id="@+id/nota_item_descricao"
+                android:id="@+id/filme_item_data_lançamento"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
@@ -64,6 +64,22 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/filme_item_titulo"
                 tools:text="@tools:sample/lorem/random" />
+
+            <TextView
+                android:id="@+id/filme_item_lingua_original"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:ellipsize="end"
+                android:maxLines="4"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/filme_item_data_lançamento"
+                tools:text="@tools:sample/lorem/random" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
