--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,17 +9,20 @@
         android:id="@+id/navigation_home"
         android:name="br.com.alura.appfilmes.ui.home.HomeFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home"
+        android:background="#454545"/>
 
     <fragment
         android:id="@+id/navigation_dashboard"
         android:name="br.com.alura.appfilmes.ui.dashboard.DashboardFragment"
         android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        tools:layout="@layout/fragment_dashboard"
+        android:background="#454545"/>
 
     <fragment
         android:id="@+id/navigation_notifications"
         android:name="br.com.alura.appfilmes.ui.notifications.NotificationsFragment"
         android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        tools:layout="@layout/fragment_notifications"
+        android:background="#454545"/>
 </navigation>
